--- a/al batal.css
+++ b/al batal.css
@@ -100,8 +100,7 @@ header nav ul li a {
 
 .service img {
     width: 200px; /* Adjust width as needed */
-    height: auto; /* Maintain aspect ratio */
-    max-height: 150px; /* Limit the height to ensure large images fit */
+    height:150px; /* Maintain aspect ratio */
     object-fit: cover;
     margin-right: 20px;
     border-radius: 5px; /* Optional: Adds rounded corners to images */
